--- a/page-Yavorovskaya-niagara.html
+++ b/page-Yavorovskaya-niagara.html
@@ -147,11 +147,20 @@
                         <div class="list-group">
                           <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start ">
                             <div class="d-flex w-100 justify-content-between">
-                              <h5 class="mb-1">Апрель-Май</h5>
+                              <h5 class="mb-1">Апрель</h5>
                               <small>4 Дня</small>
                             </div>
-                            <p class="mb-1">30.04-3.05</p>
-                            <p class="mb-1">07-10.05</p>
+                            <p class="mb-1">30.04-03.05</p>
+                            <small>Цена билета: 4200грн. - 4 дня, дети от 6до 12 лет - 3800грн.
+                            ШОК ВСЕГО 10% предоплата по брони 420/380грн.
+                            дети до 5 лет бесплатно (без отдельных мест в транспорте, при поселении и без питания)</small>
+                          </a>
+                           <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start ">
+                            <div class="d-flex w-100 justify-content-between">
+                              <h5 class="mb-1">Май</h5>
+                              <small>4 Дня</small>
+                            </div>
+                            <p class="mb-1">07-10</p>
                             <small>Цена билета: 4200грн. - 4 дня, дети от 6до 12 лет - 3800грн.
                             ШОК ВСЕГО 10% предоплата по брони 420/380грн.
                             дети до 5 лет бесплатно (без отдельных мест в транспорте, при поселении и без питания)</small>
@@ -173,7 +182,7 @@
                               <small class="text-muted">4 Дня</small>
                             </div>
                             <p class="mb-1">08-11</p>
-                            <p class="mb-1"> 29-01.08</p>
+                            <p class="mb-1">29-01.08</p>
                             <small class="text-muted">Цена билета: 4200грн. - 4 дня, дети от 6до 12 лет - 3800грн.
                              ШОК ВСЕГО 10% предоплата по брони 420/380грн.
                              дети до 5 лет бесплатно (без отдельных мест в транспорте, при поселении и без питания)</small>
