--- a/page-Yavorovskaya-niagara.html
+++ b/page-Yavorovskaya-niagara.html
@@ -279,12 +279,20 @@
                                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
-                                        <p><strong>11:00 </strong>
-                                             Выезд с центра Запорожья после минутки позитива. 
-                                            Фестивальная- Металлургов - Каховская заберем Вас в этих 3х местах где 
-                                            удобно, о месте посадки пишите при бронировании.
+                                        <h5> День 1 </h5>
+                                        <p><strong>08:30-09:00</strong>
+                                             
+                                            Встречаем Вас на ж/д вокзале г.Львов. Поезда прибытие в Львов из Запорожья в 5:30, из Днепра в 8:30. 
+                                            <!-- Alert info -->
+                                            <div class="alert alert-danger mt-3 ">
+                                                <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br>
+                                                <span class="txt-alg-jf">
+                                                К туру в Карпаты можно присоединиться в г.Ивано-Франковск и в г. Яремче
+                                                (согласуйте этот вопрос с менеджером при покупке тура. Цена тура не меняется).
+                                                </span>
+                                            </div>   
                                         </p>
-                                        <p><strong>11:50-12:50 </strong>
+                                     <!--   <p><strong>11:50-12:50 </strong>
                                              Экскурсия по Пасеке. Посещаем улики где живут трудяжки 
                                              пчелки, в защитных костюмах и под присмотром опытного пасечника!
                                              Пробуем 2 вида меда: подсолнух и разнотравье, плюс вкуснейший забрус 
@@ -316,7 +324,7 @@
                                         <hr>
                                         <p>
                                          <i> *время указано предварительно и может быть незначительно изменено без ущерба качеству экскурсии.</i>
-                                        </p> 
+                                        </p> -->
                                     </div>
                                 </div>
                             </div>
