--- a/page-Yavorovskaya-niagara.html
+++ b/page-Yavorovskaya-niagara.html
@@ -394,44 +394,46 @@
                             </div>
                          </main>
                          <br>
-
-                            <div class="alert alert-success">
-                                <h5 class="alert-heading">В стоимость входит:</h5>
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item list-group-item-success">
-                                      Проезд по всему маршруту на комфортабельном транспорте от 18 до 49 мест; 
-                                    </li>
-                                    <li class="list-group-item list-group-item-success ">
-                                        экскурсия по Сырной ферме;
-                                    </li>
-                                    <li class="list-group-item list-group-item-success ">
-                                       дегустация 7 видов сыра, молоко, йогурт;
-                                    </li>
-                                    <li class="list-group-item list-group-item-success ">
-                                        экскурсия по Пасеке;
-                                    </li>
-                                    <li class="list-group-item list-group-item-success ">
-                                        дегустация 2 вида меда и забрус;
-                                    </li>
-                                    <li class="list-group-item list-group-item-success ">
-                                        сопровождение представителя нашей компании;
-                                    </li>
-                                    <li class="list-group-item list-group-item-success ">
-                                        магнит от Нового поворота.
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="alert alert-danger">
-                                <h5 class="alert-heading">В стоимость не входит:</h5>
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item list-group-item-danger ">
-                                        Индивидуальная покупка меда  130 грн/л, 3л -380 грн;
-                                    </li>
-                                    <li class="list-group-item list-group-item-danger ">
-                                        индивидуальная покупка сыра от 45 до 60 грн /100 г от вида и йогурта. 
-                                    </li>
-                                    <ul>
-                            </div>
+                        <div class="alert alert-success">
+                            <h5 class="alert-heading">В стоимость входит:</h5>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item list-group-item-success">
+                                  Проезд комфортабельным транспортом по всему маршруту;
+                                </li>
+                                <li class="list-group-item list-group-item-success ">
+                                    самый колоритный местный экскурсовод в пути;
+                                </li>
+                                <li class="list-group-item list-group-item-success ">
+                                   проживание в лучших усадьбах зеленого туризма 3 ночи 2-3 местные номера удобства в номере;
+                                </li>
+                                <li class="list-group-item list-group-item-success ">
+                                    вкуснейшие 3 завтрака, 3 ужина.
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="alert alert-danger">
+                            <h5 class="alert-heading">Дополнительно оплачивается:</h5>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item list-group-item-danger ">
+                                    Жд билеты до Львова и обратно( Плацкарт от 250грн/купе от 350 грн /чел в одну сторону);
+                                </li>
+                                <li class="list-group-item list-group-item-danger ">
+                                   сплав по реке Черемош 350 грн;
+                                </li>
+                                <li class="list-group-item list-group-item-danger ">
+                                   подъем  на Говерлу 300 грн;
+                                </li>
+                                <li class="list-group-item list-group-item-danger ">
+                                  поход на пастбище Крынта с дегустацией сыров и кальвадоса 250 грн;
+                                </li>
+                                <li class="list-group-item list-group-item-danger ">
+                                  банош на огне с брынзой + 50-60 грн;
+                                </li>
+                                <li class="list-group-item list-group-item-danger ">
+                                  обед на форельном хозяйстве 220 грн.
+                                </li>
+                            <ul>
+                        </div>
                          <hr>
                          <p>
                            Тексты подсказок:
