--- a/page-Yavorovskaya-niagara.html
+++ b/page-Yavorovskaya-niagara.html
@@ -286,6 +286,7 @@
                                             
                                             <!-- Alert info -->
                                             <div class="alert alert-danger mt-3 ">
+                                                <button type="button" class="close" data-dismiss="alert">&times;</button>
                                                 <span class="fa fa-exclamation-triangle"></span>
                                                 <strong> Внимание!</strong>
                                                 <br>
