--- a/page-Yavorovskaya-niagara.html
+++ b/page-Yavorovskaya-niagara.html
@@ -295,7 +295,16 @@
                                                 К туру в Карпаты можно присоединиться в г.Ивано-Франковск и в г. Яремче
                                                 (согласуйте этот вопрос с менеджером при покупке тура. Цена тура не меняется).
                                                 </span>
-                                            </div>   
+                                            </div>  
+                                        
+                                           <!-- Alert2 info -->
+                                            <div class="alert alert-danger mt-3 ">
+                                                <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br>
+                                                <span class="txt-alg-jf">
+                                                   тест
+                                                </span>
+                                            </div>
+                                        
                                         </p>
                                      <!--   <p><strong>11:50-12:50 </strong>
                                              Экскурсия по Пасеке. Посещаем улики где живут трудяжки 
