--- a/page-Yavorovskaya-niagara.html
+++ b/page-Yavorovskaya-niagara.html
@@ -282,9 +282,9 @@
                                         <h5> День 1 </h5>
                                         <p><strong>08:30-09:00</strong>
                                              
-                                            Встречаем Вас на ж/д вокзале г.Львов. Поезда прибытие в Львов из Запорожья в 5:30, из Днепра в 8:30. 
+                                            Встречаем Вас на ж/д вокзале г.Львов. Прибытие поезда во Львов из Запорожья, в 05:30, из Днепра в 08:30. 
                                              <span class="p-2 bg-danger text-white">
-                                                 К туру в Карпаты можно присоединиться в г.Ивано-Франковск и в г. Яремче
+                                                Внимание! К туру можно присоединиться в г.Ивано-Франковск и в г. Яремче
                                                 (согласуйте этот вопрос с менеджером при покупке тура. Цена тура не меняется).
                                              </span>
 
