--- a/page-Yavorovskaya-niagara.html
+++ b/page-Yavorovskaya-niagara.html
@@ -289,15 +289,10 @@
                                              </span>
 
                                         </p>
-                                     <!--   <p><strong>11:50-12:50 </strong>
-                                             Экскурсия по Пасеке. Посещаем улики где живут трудяжки 
-                                             пчелки, в защитных костюмах и под присмотром опытного пасечника!
-                                             Пробуем 2 вида меда: подсолнух и разнотравье, плюс вкуснейший забрус 
-                                             (медовые соты). По желанию берем покупаем медок с собой, 
-                                             Цены супер! Для наших туристов 130 грн/л, 3л -380 грн.
-                                             После вкусной дегустации отправляемся дальше на Сырную ферму.
+                                        <p><strong>13:30 </strong>
+                                             Вкуснейший обед в Яремче.
                                         <p/>
-                                          <p><strong>13:00-14:30 (15:00) </strong>
+                                        <!--  <p><strong>13:00-14:30 (15:00) </strong>
                                                 Мы в удивительном месте настоящей Сырной ферме. Такие 
                                                 фермы мы видели лишь в Закарпатском Хусте. Но эта еще интереснее! Ведь в 
                                                 этом месте рождаются шедевры сыроварения! Тут сыры свисают с потолка в 
