--- a/page-yavorovskaya-niagara.html
+++ b/page-yavorovskaya-niagara.html
@@ -292,29 +292,49 @@
                                         <p><strong>13:30 </strong>
                                              Вкуснейший обед в Яремче.
                                         <p/>
-                                        <!--  <p><strong>13:00-14:30 (15:00) </strong>
-                                                Мы в удивительном месте настоящей Сырной ферме. Такие 
-                                                фермы мы видели лишь в Закарпатском Хусте. Но эта еще интереснее! Ведь в 
-                                                этом месте рождаются шедевры сыроварения! Тут сыры свисают с потолка в 
-                                                виде грушек, на полочках покрываются вкусной корочкой, источают 
-                                                неописуемый аромат, ведь невозможно передать словами этот чудесный вкус 
-                                                натурального сыра. Мы попробуем 7 сыров: Вознесеновский со смесью трав,  
-                                                Качотта, Гауда с крапивой,  Альпийский, Пармарелло, Качокавалло + 
-                                                "ЗАГАДКА" ОДИН ВИД СЫРА ВЫ УЗНАЕТЕ УЖЕ НА ФЕРМЕ!
-                                                Мы увидим миленьких козочек и козляточек, а у Александра их больше 70 
-                                                голов. Познакомимся с осликом Кешей и угостим его вкусным сеном. 
-                                                Попробуем настоящего козьего молочка и вкуснейшего йогурта. 
-                                                Мы посмотрим весь путь который проходит сыр от молочка до ароматного и 
-                                                вкусами любимого блюда, увидим больше 40 видов различных сыров...
-                                                Я могу еще долго писать Вам так нам будет хорошо, но стоит увидеть своими 
-                                                глазами эту красоту. 
+                                    <p><strong>14:30</strong>
+                                               ПОКУПАЕМ САМЫЕ ИНЕТЕРЕСНЫЕ СУВЕНИРЫ
+                                               НА РЫНКЕ В ЯРЕМЧЕ, гуляем по - горному 
+                                               курорту Карпатского национального природного парка. 
+                                               КОМУ ЗАХОТЕЛОСЬ СБРОСИТЬ 10-20 ЛЕТ ИЛИ ДАЖЕ ПАРУ ГОДКОВ, КУПАНИЕ В ОЗЕРЕ МОЛОДОСТИ.
                                         </p>
-                                        <p><strong>15:50 </strong>
-                                            Мы уже в Запорожье, В ПОЛНОМ ВОСТОРГЕ с сыром и медом возвращаемся 
-                                            домой чтоб поделится впечатлениями с друзьями и близкими (но еще лучше их взять с собой).
+                                        <p><strong>19:30</strong>
+                                             ЛУЧШЕЕ МЕСТО ЧТОБ ОЩУТИТЬ ВСЕ 
+ГОСТЕПРИИМСТВО УГОРЦЕВ ЖИТЬ В МЕСТНЫХ САДЫБАХ. Проживание в номерах на 2-3 человека 
+с удобствами в номере. Все красоты рядом! Коттеджи стоят под горой, 
+рядом лес. Во дворе есть беседка, мангал. В отдельном огороженном доме есть чан 
+для 5-6 человек с сероводородной водой
+                                        </p>
+                                        <p><strong>20:00 </strong>
+                                             Cытнейший ужин, и свободное время для наслаждения отдыхом и красотами вокруг.
+                                        </p>
+                                         <h5>День 2</5>
+                                         <p><strong>08:00 </strong>                                                                  
+                                             Ранний вкусный завтрак
+У нас масса вариантов как отдохнуть! Выбирайте на свой вкус!<br>
+Вариант 1 <br>ДЕГУСТАЦИЯ ГУЦУЛЬСКИХ БЛЮД И ЛУЧШИЙ ВОЗДУХ УКРАИНЫ! 
+Выезд на пастбище Крынта. В этом месте частоту воздуха разрезает игра трамбуют, самого длинного в мире музыкального инструмента. Так нас встречают пастухи. Старший в долине играет на свирели 
+и пастушьей углу.
+В хижине, где пастухи готовят сыр, ждет угощение, хлеб, чай, мед и сыр трех видов: брынза (рассыпчатый соленый овечий сыр), копченый будз и вурда (диетический нежный сыр, почти нет жирности 
+сладковатого вкуса) и обязательный элемент Карпат - живая вода - самогон на основе яблочного сока. Некий карпатский кальвадос.
+На обед стоит заказать настоящий полонинский бануш, который приготовят на дровах. Это праздничное блюдо гуцулов (кукурузная крупа приготовленная на сметане).
+Время для фотографий, релакса, удовольствия ... Море впечатлений, знаний, понимания гуцульской культуры и чрезвычайные эмоции.<br>
+Вариант 2<br>
+ВЗОЙДЕМ НА ВЕРШИНУ УКРАИНСКИХ КАРПАТ - ГОВЕРЛУ (2061 м). Профессиональный горный проводник позаботится, чтобы поход был интересным и безопасным.<br>
+Вариант 3<br>
+РЕЛАКС В КАРПАТСКИХ СПА - Чанах! А потом неспешные прогулки среди красот местной природы!
+<p><strong>18:00 </strong> Cамый вкусный и интересный ужин
+День 3 ДРАЙВ И ГОРНЫЕ РЕКИ ИЛИ ЧАШКА КОФЕ СРЕДИ ГОР!</p>
+<p><strong> 09:30 </strong> Для того чтобы почувствовать особую энергию Карпат в полной мере непременно следует попробовать рафтинг - сплав по реке Черный Черемош. Это активный отдых, который придаст драйва и 
+невероятных эмоций. Сплав не требует особой подготовки, а опытные инструкторы позаботятся о вашей безопасности и хорошее настроение.
+Стоимость 350 грн / чел. В стоимость входит: трансфер, снаряжение (жилет, каска, весло), работа инструктора.
+Сам сплав продолжается ориентировочно 1,5 часа. Все зависит от скорости течения и полноводности реки.
+Кто еще колеблется и не готов к речному драйва может провести утро на свое настроение: с чашечкой кофе среди горной панорамы, прогуляться Верховиной, подняться на смотровую площадку ...</p>
+<p><strong>13:00</strong> ЯВОРОВСКАЯ НИАГАРА И ФОРЕЛЬ ПО-КАРПАТСКИ! 
+Где как в Карпатах стоит попробовать королевскую рыбу - форель ?! Село Яворов славится давними традициями, а еще здесь Сокольское водопады, которые в период высокой воды
                                         </p>
                                         <hr>
-                                        <p>
+                                       <!-- <p>
                                          <i> *время указано предварительно и может быть незначительно изменено без ущерба качеству экскурсии.</i>
                                         </p> -->
                                     </div>
@@ -361,8 +381,8 @@
                               </div>
                               <div class="card">
                                 <div class="card-image"> <a data-fancybox="gallery" data-caption="Яворовская Ниагара #6" data-fancybox="gallery"
-                                    href="/images/YavorovskayaNiagara/YavorovskayaNiagara-5.jpg">
-                                    <img src="/images/YavorovskayaNiagara/YavorovskayaNiagara-5.jpg"></a>
+                                    href="/images/YavorovskayaNiagara/YavorovskayaNiagara-8.jpg">
+                                    <img src="/images/YavorovskayaNiagara/YavorovskayaNiagara-8.jpg"></a>
                                 </div>
                               </div>
                               <div class="card">
@@ -379,8 +399,8 @@
                               </div>
                               <div class="card">
                                 <div class="card-image"> <a data-fancybox="gallery" data-caption="Яворовская Ниагара #8" data-fancybox="gallery"
-                                    href="/images/YavorovskayaNiagara/YavorovskayaNiagara-8.jpg">
-                                    <img src="/images/YavorovskayaNiagara/YavorovskayaNiagara-8.jpg"></a>
+                                    href="/images/YavorovskayaNiagara/YavorovskayaNiagara-2.jpg">
+                                    <img src="/images/YavorovskayaNiagara/YavorovskayaNiagara-2.jpg"></a>
                                 </div>
                               </div>
                             </div>
