--- a/page-yavorovskaya-niagara.html
+++ b/page-yavorovskaya-niagara.html
@@ -331,8 +331,22 @@
 Сам сплав продолжается ориентировочно 1,5 часа. Все зависит от скорости течения и полноводности реки.
 Кто еще колеблется и не готов к речному драйва может провести утро на свое настроение: с чашечкой кофе среди горной панорамы, прогуляться Верховиной, подняться на смотровую площадку ...</p>
 <p><strong>13:00</strong> ЯВОРОВСКАЯ НИАГАРА И ФОРЕЛЬ ПО-КАРПАТСКИ! 
-Где как в Карпатах стоит попробовать королевскую рыбу - форель ?! Село Яворов славится давними традициями, а еще здесь Сокольское водопады, которые в период высокой воды
-                                        </p>
+Где как в Карпатах стоит попробовать королевскую рыбу - форель ?! Село Яворов славится давними традициями, а еще здесь Сокольское водопады, которые в период высокой воды                                     
+формируют свою - Яворовскую Ниагару. На этих горных потоках действует форельное хозяйство. Здесь мы и пообедаем ...
+Грибной суп, картофель по-деревенски, салат овощной, хлеб, компот и 
+свеженькая, только пойманная форель (200 грн / чел)
+Пока готовится форель мы осмотрим каскад Сокольском водопадов (5-15 метров).
+ПИКНИК НА ЗАКАТЕ СОЛНЦА В МАГИЧЕСКОМ МЕСТЕ!
+Выезжаем спецтехникой на Расписной Камень. Писан Камень вершина 1221 метров над уровнем моря, недалеко от Буковецкого перевала предел Покутсько-буковинских Карпат. Согласно легенде здесь 
+когда-то жили великаны, которые для увековечить себя в веках, на вершину снесли камни песчаники высотой в 20-30 метров. По дороге мы увидим потрясающую панораму Черногорского хребта с его 
+вершинами двухтысячниками: Поп Иван, Бребенескул, Гутин-Томнатик, Ребра, Говерла, Петрос, позвоночник Крынта и поселок Верховина.
+
+
+
+
+
+
+
                                         <hr>
                                        <!-- <p>
                                          <i> *время указано предварительно и может быть незначительно изменено без ущерба качеству экскурсии.</i>
