--- a/page-yavorovskaya-niagara.html
+++ b/page-yavorovskaya-niagara.html
@@ -339,8 +339,33 @@
 ПИКНИК НА ЗАКАТЕ СОЛНЦА В МАГИЧЕСКОМ МЕСТЕ!
 Выезжаем спецтехникой на Расписной Камень. Писан Камень вершина 1221 метров над уровнем моря, недалеко от Буковецкого перевала предел Покутсько-буковинских Карпат. Согласно легенде здесь 
 когда-то жили великаны, которые для увековечить себя в веках, на вершину снесли камни песчаники высотой в 20-30 метров. По дороге мы увидим потрясающую панораму Черногорского хребта с его 
-вершинами двухтысячниками: Поп Иван, Бребенескул, Гутин-Томнатик, Ребра, Говерла, Петрос, позвоночник Крынта и поселок Верховина.
+вершинами двухтысячниками: Поп Иван, Бребенескул, Гутин-Томнатик, Ребра, Говерла, Петрос, позвоночник Крынта и поселок Верховина.<br>
+День 4. 
+Вкусный завтрак. Выселение из отеля, но еще не прощаение! Впереди еще море интересного! 
+ДРЕВНЕЙШЕЕ МЕСТО КАРПАТ! Прогулка к Терношорськои Лады - каменной статуи богини-матери. Это уникальный скальный комплекс, украинский Стоунхендж. По представлению наших предков именно здесь 
 
+зародилось все живое. Это место силы и особой энергетики. Дорога живописная, вдоль горного потока и не сложная в прохождении (подъем вверх на 300-400 м, 30-40 мин в одну сторону).
+Колоритный обед
+15.30 КУПАНИЕ В СЕРЕБРИСТЫХ ВОДОПАДАХ Шешоры. 
+21.30 возвращение во Львов. Удобнее всего назад поезд в час ночи 70 Львов Мариуполь (через Запорожье)
+
+
+В стоимость входит:
+проезд комфортабельным транспортом по всему маршруту;
+самый колоритный местный экскурсовод в пути;
+проживание в лучших усадьбах зеленого туризма 3 ночи 2-3 местные номера удобства в номере;
+вкуснейшие 3 завтрака, 3 ужина
+
+Дополнительно оплачивается:
+Жд билеты до Львова и обратно( Плацкарт от 250грн/купе от 350 грн /чел в одну сторону);
+сплав по реке Черемош 350 грн;
+подъем  на Говерлу 300 грн;
+поход на пастбище Крынта с дегустацией сыров и кальвадоса 250 грн;
+банош на огне с брынзой + 50-60 грн;
+обед на форельном хозяйстве 220 грн 
+
+#Запорожье #НовыйповоротЗапорожье #путешествия #туризм #Буковель #ЗападнаяУкраинаизЗапорожья  #Яремче #экскурсииЗапорожье
+#кудапоехатьЗапорожье #достопримечательностиЗапорожье #афишаЗапорожья #ZAporizhya #Львовнавыходные #турнаЗападнуюУкраину
 
 
 
