--- a/page-yavorovskaya-niagara.html
+++ b/page-yavorovskaya-niagara.html
@@ -150,53 +150,53 @@
                               <h5 class="mb-1">Апрель</h5>
                               <small>4 Дня</small>
                             </div>
-                            <p class="mb-1">30.04-03.05</p>
+                            <p class="mb-1">с 30 по 03.05</p>
                           </a>
                            <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start ">
                             <div class="d-flex w-100 justify-content-between">
                               <h5 class="mb-1">Май</h5>
                               <small>4 Дня</small>
                             </div>
-                            <p class="mb-1">07-10</p>
+                            <p class="mb-1">с 07 по 10</p>
                           </a>
                           <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
                             <div class="d-flex w-100 justify-content-between">
                               <h5 class="mb-1">Июнь</h5>
                               <small class="text-muted">4 Дня</small>
                             </div>
-                            <p class="mb-1">03-06</p>
-                            <p class="mb-1">18-21</p>
+                            <p class="mb-1">с 03 по 06</p>
+                            <p class="mb-1">с 18 по 21</p>
                           </a>
                           <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
                             <div class="d-flex w-100 justify-content-between">
                               <h5 class="mb-1">Июль</h5>
                               <small class="text-muted">4 Дня</small>
                             </div>
-                            <p class="mb-1">08-11</p>
-                            <p class="mb-1">29-01.08</p>
+                            <p class="mb-1">с 08 по 11</p>
+                            <p class="mb-1">с 29 по 01.08</p>
                           </a>
                           <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
                             <div class="d-flex w-100 justify-content-between">
                               <h5 class="mb-1">Август</h5>
                               <small class="text-muted">4 Дня</small>
                             </div>
-                            <p class="mb-1">12-15</p>
-                            <p class="mb-1"> 21-24</p>
+                            <p class="mb-1">с 12 по 15</p>
+                            <p class="mb-1">с 21 по 24</p>
                           </a>
                           <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
                             <div class="d-flex w-100 justify-content-between">
                               <h5 class="mb-1">Сентябрь</h5>
                               <small class="text-muted">4 Дня</small>
                             </div>
-                            <p class="mb-1">09-12</p>
-                            <p class="mb-1">23-26</p>
+                            <p class="mb-1">с 09 по 12</p>
+                            <p class="mb-1">с 23 по 26</p>
                           </a>
                           <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
                             <div class="d-flex w-100 justify-content-between">
                               <h5 class="mb-1">Октябрь</h5>
                               <small class="text-muted">4 Дня</small>
                             </div>
-                            <p class="mb-1">14-17</p>
+                            <p class="mb-1">с 14 по 17</p>
                           </a>
                         </div>
                         <br> 
